Fixed the width of the favouriteCard and currently trying to fix the active link on mobile displays on the nav , also fixed the dashboard nav active link color and more

--- a/components/ui/cards/favouriteCard/styles.module.scss
+++ b/components/ui/cards/favouriteCard/styles.module.scss
@@ -58,7 +58,7 @@
     h3 {
       font-size: 14px;
       line-height: 17px;
-      width: 200px;
+      // width: 200px;
       margin-top: 5px;
     }
 
