--- a/components/ui/dashboardNav/nav/styles.module.scss
+++ b/components/ui/dashboardNav/nav/styles.module.scss
@@ -89,7 +89,7 @@
 
       > a {
         font-size: 16px;
-        color: var(--white);
+        color: var(--white) !important;
         font-weight: bold;
 
         @media (max-width: 1264px) {
